tests/should_fail/logic_alias/function_aliased_to_trait.stderr
error: A program function can only be aliased by another program function.
  --> function_aliased_to_trait.rs:17:1
   |
17 | #[logic_alias(S::is_zero(x@))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> function_aliased_to_trait.rs:18:1
   |
18 | fn is_zero(x: i64) -> bool {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> function_aliased_to_trait.rs:9:5
   |
 9 |     fn is_zero(x: Int) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

